@@ -18396,10 +18396,10 @@ The Land of Dragons:
             isboss: false
             name: Nightwalker
       b_45:
-        ignored: true # ambush auuuuuah
-        msn_replacement:
-          original: MU02_MS103B
-          new: MU02_MS103A
+        ignored: false # ambush auuuuuah
+        # msn_replacement:
+        #   original: MU02_MS103B
+        #   new: MU02_MS103A
         sp_ids:
           '416':
           - index: 0
